--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.2",
     "prisma": "^5.12.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
