--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.12.1",
     "bcrypt": "^5.1.1",
+    "jose": "^5.2.4",
     "next": "14.2.2",
     "prisma": "^5.12.1",
     "react": "^18",
