--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^7.1.4",
@@ -40,12 +41,12 @@
     "@types/bcrypt": "^5.0.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "18.2.79",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.4.5"
   }
 }
